# Kelvin

./: .gitignore  CMakeLists.txt  README.md
docs/: CONTRACT.md
src/: Browse.hpp  Constraints.hpp  CrossRef.hpp  CrossRefClasses.hpp  CrossRefDecode.hpp  CrossRefDimensions.hpp  CrossRefParams.hpp  CrossRefRescue.hpp  CrossRefScore.hpp  Hash.hpp  Index.cpp  Index.hpp  KelvinApi.cpp  KelvinApi.hpp  MfrPolicy.hpp  RecordFetcher.cpp  RecordFetcher.hpp  Requirements.cpp  Requirements.hpp  Rows.hpp  Select.cpp  Select.hpp  Views.cpp  Views.hpp  bindings.cpp  libKelvin.cpp
tests/: test_browse.cpp  test_components.cpp  test_crossref_classes.cpp  test_crossref_dimensions.cpp  test_crossref_fuzz.cpp  test_crossref_golden.cpp  test_crossref_rank.cpp  test_crossref_ranking_golden.cpp  test_crossref_score.cpp  test_determinism.cpp  test_index.cpp  test_mfr_policy.cpp  test_parity.cpp  test_phase5.cpp  test_requirements.cpp  test_select.cpp
tests/fixtures/: analog_ics.ndjson  bjts.ndjson  connectors.ndjson  controllers.ndjson  diodes.ndjson  igbts.ndjson  magnetics.ndjson  mosfets.ndjson  resistors.ndjson  timing_devices.ndjson  varistors.ndjson
tests/golden/: crossref_parity.json  kelvin_golden_capacitor.json  kelvin_golden_controller.json  kelvin_golden_diode.json  kelvin_golden_mosfet.json  kelvin_golden_resistor.json
tools/: kelvin_index_main.cpp
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
web/scripts/: build-kelvin-shards.sh  deploy-kelvin-data.sh  deploy-prod.sh  nginx-kelvin.conf
web/src/: App.vue  curves.js  engine.js  families.js  main.js  store.js  style.css  units.js  worker.js
web/src/components/: CurveChart.vue  FilterRail.vue  MarginMeter.vue  PartDrawer.vue  PartsTable.vue
web/src/views/: CatalogView.vue  CompareView.vue  CrossRefView.vue  RecommendView.vue  StatsView.vue
web/tests/: kelvin.spec.js
